Mon Jun 28 15:08:30 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/Ownership/Writer.cpp:
        * tests/DCPS/Ownership/publisher.cpp:

          Renamed global variable "delay" to avoid conflict with QNX system
          headers.

        * tests/DCPS/UnitTests/LivelinessCompatibility.cpp:

          Need another #include for inline=0 GCC 3.3.x compatibility.

Fri Jun 25 20:47:38 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/Ownership/subscriber.cpp:

          Moved result verify after Service_Participant shutdown.
          This would fix pure function called error on linux due
          to earlier result verify which failed sometimes.

Fri Jun 25 18:36:19 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * bin/dcps_tests.lst:

          Marked the Ownership update_strength test only run
          when built in topic is enabled.

        * dds/DCPS/OwnershipManager.cpp:

          Fixed a memory corruption due to a possibility to
          erase vector end.

Thu Jun 24 21:21:57 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/GroupRakeData.h:

          Fixed a GCC warning by making sure ACE pre-processor macros are
          defined before use.

        * dds/DCPS/Comparator_T.h:
        * dds/DCPS/Definitions.h:
        * dds/InfoRepo/DCPS_Utils.cpp
        * tests/DCPS/FooTest4/main.cpp:
        * tests/DCPS/GroupPresentation/SubscriberListener.cpp:
        * tests/DCPS/Presentation/main.cpp:
        * tests/DCPS/UnitTests/LivelinessCompatibility.cpp:

          More GCC 3.3.x work-arounds.

        * dds/idl/be_produce.cpp:

          Use main_filename() instead of filename() since some pre-processors
          use a temporary filename (SunCC).

        * examples/DCPS/Messenger_IOGR_Imr/Messenger_IOGR_Imr.mpc:

          Make sure we get rules.dds.GNU included in the makefile.

        * tests/DCPS/ViewState/ViewState.mpc:
        * tests/DCPS/ZeroCopyRead/ZeroCopyRead.mpc:
